force-app/main/default/objects/Prescription__c/fields/Date_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_issue__c</fullName>
    <description>Data wystawienia recepty.</description>
    <label>Date of issue</label>
    <type>Date</type>
</CustomField>