force-app/main/default/objects/Prescription__c/fields/Patient_Prescription__c.field-meta.xml
<CustomField>
    <fullName>Patient_Prescription__c</fullName>
    <label>Patient_Prescription</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>