force-app/main/default/objects/Prescription__c/fields/Prescription_number__c.field-meta.xml
<CustomField>
    <fullName>Prescription_number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Prescription number</label>
    <type>AutoNumber</type>
</CustomField>